when creating branch, show current_account's companies only on the dropdown

--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :company_id %><br>
-    <%= f.select :company_id, Company.all.collect {|company| [ company.name, company.id] }, { include_blank: 'Select Company' } %>
+    <%= f.select :company_id, current_account.companies.collect {|company| [ company.name, company.id] }, { include_blank: 'Select Company' } %>
   </div>
   <div class="field">
     <%= f.label :phone_number %><br>
