--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 							<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 						</span>
 					</a>
-					<a href="#">
+					<a href="https://plus.google.com/u/1/?hl=en">
 						<span class="fa-stack fa-lg">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
