--- a/app/views/dashboard/_top_nav.html.erb
+++ b/app/views/dashboard/_top_nav.html.erb
@@ -1,27 +1,109 @@
-<div class="ui purple inverted menu">
-  <a class="active item" href="<%= root_path %>">
-    <i class="home icon"></i> Home
-  </a>
-  <!-- <a class="item" href=<%= dashboard_index_path %>>
-    <i class="settings icon"></i> Dashboard
-  </a> -->
-  <a class="item" href="/map">
-    <i class="pin icon"></i> Map
-  </a>
-  <a class="item" href="<%= new_company_path %>">
-    <i class="plus icon"></i> Add a company
-  </a>
-  <a class="item" href="<%= new_branch_path %>">
-    <i class="plus icon"></i> Add a branch
-  </a>
-  <div class="right menu">
-  	<div class="ui dropdown item">
-      <% if account_signed_in? %>
-        <%= link_to "Sign Out", destroy_account_session_path, :method => :delete %>
-      <% end %>
-  	  <!-- <div class="menu">
-  	    <a class="item">Log Out</a>
-  	  </div> -->
-  	</div>
-  </div>
-</div>
+<header class="header">
+    <a href="<%= root_path %>" class="logo">
+      <i class="fa fa-home"></i> Ujirani App
+    </a>
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="navbar navbar-static-top" role="navigation">
+      <!-- Sidebar toggle button-->
+      <a href="#" class="navbar-btn sidebar-toggle" data-target="#atas" data-toggle="offcanvas" role="button">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <div class="collapse navbar-collapse" id="atas">
+        <div class="navbar-left">
+          <ul class="nav navbar-nav">
+            <li class="dropdown tasks-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="fa fa-bell"></i>
+                <span class="label label-danger"><%= Incident.where(viewed: false).count %></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="header">You have <%= Incident.where(viewed: false).count %> new incidents</li>
+                <li>
+                  <!-- inner menu: contains the actual data -->
+                  <ul class="menu">
+                    <% Incident.where(viewed: false).each do |incident| %>
+                      <li><!-- Task item -->
+                        <a href="<%= incident_path(incident) %>">
+                          <h3>
+                            <%= incident.user.name %>
+                            |
+                            <%= incident.incident_type %>
+                            <span class="pull-right">
+                            <% if incident.resolved %>
+                              <span class="label label-success"><i class="fa fa-check"></i></span>
+                            <% else %>
+                              <span class="label label-danger"><i class="fa fa-remove"></i></span>
+                            <% end %>
+                            </span>
+                          </h3>
+                          <!-- <div class="progress xs">
+                            <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                              <span class="sr-only">20% Complete</span>
+                            </div>
+                          </div> -->
+                        </a>
+                      </li>
+                    <% end %>
+                  </ul>
+                </li>
+                <li class="footer">
+                  <a href="<%= incidents_path %>">View all incidents</a>
+                </li>
+              </ul>
+            </li>
+            <!-- <li class="form-search">
+              <input type="text" class="form-control" placeholder="Search..">
+            </li> -->
+            
+          </ul>
+        </div>
+        <div class="navbar-right">
+          <ul class="nav navbar-nav">
+          <li id="nav-link">
+              
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= image_tag "/assets/missing.jpg", class: "img-circle", style: "width: 25px;" %>
+                <strong>@john</strong>
+              </a>
+              <ul class="dropdown-menu dropdown-login">
+                <li>
+                  <div class="navbar-login">
+                    <div class="row">
+                      <div class="col-lg-3">
+                        <p class="text-center">
+                          <img src="img/user.jpg" class="img-responsive img-circle">
+                        </p>
+                      </div>
+                      <div class="col-lg-9">
+                        <p class="text-left"><strong>John Doe</strong></p>
+                        <p class="text-left small">johndoe@email.com</p>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <small><a href="#">Edit Profile</a></small>
+                          </div>
+                          <div class="col-md-6">
+                            <small><a href="#">Notification</a></small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <div class="navbar-login navbar-login-session">
+                    <a href="#" class="btn btn-default btn-square btn-block">Logout</a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
