--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -279,19 +279,19 @@
 						<form action="//forms.brace.io/muadh24@gmail.com">
 							<div class="col-sm-4 col-sm-offset-2">
 								<div class="inputContainer">
-								<label>Name</label>
+								<label class="lable">Name</label>
 									<input type="text" name="contactName" id="contactName" value="" class="form-control" autocomplete="off" />
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="inputContainer">
-								<label class="screen-reader-text">Email</label>
+								<label class="screen-reader-text lable">Email</label>
 									<input type="text" name="email" id="email" value="" class="form-control" autocomplete="off"  />
 								</div>
 							</div>
 							<div class="col-sm-8 col-sm-offset-2">
 								<div class="inputContainer">
-								<label class="screen-reader-text">Message</label>
+								<label class="screen-reader-text lable">Message</label>
 									<textarea name="comments" id="commentsText" class="form-control" autocomplete="off"></textarea>
 								</div>
 							</div>
