--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -5,6 +5,10 @@
 		<title><%= content_for?(:title) ? yield(:title) : "Ujirani App" %></title>
 		<meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Ujirani App" %>">
 		<%= include_gon %>
+		<script type="text/javascript"
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4u6EYHG6OxEBHORkBbKXUm7OQBySIxr8">
+		</script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		<%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
 		<%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => false %>
 		<%= csrf_meta_tags %>
