display user's name only if the user is not nil

--- a/app/views/dashboard/_top_nav.html.erb
+++ b/app/views/dashboard/_top_nav.html.erb
@@ -28,8 +28,10 @@
                       <li><!-- Task item -->
                         <a href="<%= incident_path(incident) %>">
                           <h3>
-                            <%= incident.user.name %>
+                            <% if !incident.user.nil? %>
+                              <%= incident.user.name %>
                             |
+                            <% end %>
                             <%= incident.incident_type %>
                             <span class="pull-right">
                             <% if incident.resolved %>
