--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @incidents.each do |incident| %>
       <tr>
-        <td><%= incident.type %></td>
+        <td><%= incident.incident_type %></td>
         <td><%= incident.user %></td>
         <td><%= incident.notification %></td>
         <td><%= incident.location %></td>
