--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,6 +10,8 @@
 		</script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		<%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
+		<%= javascript_include_tag 'incidents', 'data-turbolinks-track' => false %>
+		<%= javascript_include_tag 'companies', 'data-turbolinks-track' => false %>
 		<%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => false %>
 		<%= csrf_meta_tags %>
 
