--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,12 +1,33 @@
 <section class="content">
-	<h1>
+	<!-- <h1>
 			Incident
 			<small>#<%= @incident.id %></small>
-	</h1>
+	</h1> -->
 	<!-- start:breadcrumb -->
 	<ol class="breadcrumb">
 			<li><a href="<%= user_path(@incident.user) %>"><i class="fa fa-user"></i> <%= @incident.user.name %></a></li>
 			<li><a href="#"><%= @incident.user.phone_number %></a></li>
+			<div class="pull-right">
+				<div class="btn-toolbar" role="toolbar">
+					<div class="btn-group">
+						<button class="btn btn-default dropdown-toggle">
+							<i class="fa fa-flag">
+							False Flag
+							</i>
+						</button>
+						<button class="btn btn-default dropdown-toggle">
+							<% if !@incident.resolved %>
+							<i class="fa fa-check">
+							Mark as Resolved
+							<% else %>
+								<i class="fa fa-remove">
+								Mark as Unresolved
+							<% end %>
+							</i>
+						</button>
+					</div>
+				</div>
+			</div>
 	</ol>
 	<!-- end:breadcrumb -->
 
@@ -28,7 +49,7 @@
 				<hr>
 				<div class="row">
 					<div class="col-md-12">
-					<div id="incident-map"></div>
+					<div id="incident-map" style="width: 100%; height: 600px;"></div>
 					</div>
 				</div>
 			</div>
@@ -37,16 +58,5 @@
 </section>
 
 <%= javascript_tag do %>
-  window.incident = '<%= raw @incident.to_json %>'
-
-  function initialize() {
-    var mapOptions = {
-      center: { lat: -1.288049, lng: 36.841828},
-      zoom: 12
-    };
-    var myLatlng = new google.maps.LatLng(-1.2137278, 36.8928517);
-    map = new google.maps.Map(document.getElementById('incident-map'),
-        mapOptions);
-  }
-  google.maps.event.addDomListener(window, 'load', initialize);
+  window.incident = '<%= raw @incident.location %>'
 <% end %>
