--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -50,8 +50,9 @@
                     // icon: incident.user_photo
                 });
                 var infowindow = new google.maps.InfoWindow({
-                    content: "<div id='content'><table><tr><td><img src=" + incident.user_photo + "/><td>Name: " + incident.user_name +
-                    "<br>Phone number: " + incident.user_phone + "<br>Estate: " + incident.house_name + "<br>House number: " + incident.house_number + "</td></tr></table></div>"
+                    content: "<div id='content'><table><tr><td><img src='" + incident.user_photo +
+                    "'/><td>Name: " + incident.user_name +
+                    "<br>Phone number: " + incident.user_phone + "<br>Estate: " + incident.house_name + "<br>House number: " + incident.house_number + "</td></tr><tr><td><br><h4><span class='label label-default'><a href='/incidents/" + incident.incident_id +"'><i class='fa fa-eye'> View</a></span></h4></td></tr></table></div>"
                 });
                 google.maps.event.addListener(marker, 'click', function() {
                   infowindow.open(map,marker);
@@ -107,8 +108,8 @@
                       // icon: incident.user_photo
                   });
                   var infowindow = new google.maps.InfoWindow({
-                      content: "<div id='content'><table><tr><td><img src=" + incident.user_photo + "/><td>Name: " + incident.user_name +
-                      "<br>Phone number: " + incident.user_phone + "<br>Estate: " + incident.house_name + "<br>House number: " + incident.house_number + "</td></tr></table></div>"
+                      content: "<div id='content'><table><tr><td><img src='#'/><td>Name: " + incident.user_name +
+                      "<br>Phone number: " + incident.user_phone + "<br>Estate: " + incident.house_name + "<br>House number: " + incident.house_number + "</td></tr><tr><td><br><span <h4>class='label label-default'><a href='/incidents/" + incident.incident_id +"'><i class='fa fa-eye'> View</a></span></h4></td></tr></table></div>"
                   });
                   new Audio('assets/siren.mp3').play()
                   google.maps.event.addListener(marker, 'click', function() {
