--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -25,6 +25,7 @@
     });
       function initialize() {
         var mapOptions = {
+          scrollwheel: false,
           center: { lat: -1.288049, lng: 36.841828},
           zoom: 12
         };
