--- a/app/views/dashboard/_top_nav.html.erb
+++ b/app/views/dashboard/_top_nav.html.erb
@@ -17,7 +17,7 @@
             <li class="dropdown tasks-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-bell"></i>
-                <span class="label label-danger"><%= Incident.where(viewed: false).count %></span>
+                <span class="label label-danger" id="incident-count"><%= Incident.where(viewed: false).count %></span>
               </a>
               <ul class="dropdown-menu">
                 <li class="header">You have <%= Incident.where(viewed: false).count %> new incidents</li>
