--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,8 +21,8 @@
         <li><a href="#productWrap">The App</a></li>
         <li><a href="#contactWrap">Contact Us</a></li>
         <% if !account_signed_in? %>
-          <li><a href="<%= new_account_registration_path %>">Sign Up</a></li>
-          <li><a href="<%= new_account_session_path %>">Sign In</a></li>
+          <li><a href="#" id="signup-link" data-toggle = "modal" data-target = "#signup_modal">Sign Up</a></li>
+          <li><a href="#" id="signin-link" data-toggle = "modal" data-target = "#signin_modal">Sign In</a></li>
         <% else %>
           <li><%= link_to "Map", map_path %></li>
         <% end %>
