--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New company</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', companies_path %>
+<section class="content">
+  <div class="row">
+    <div class="col-lg-6">
+      <h1>
+        Company
+        <small>Add a new company</small>
+      </h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</section>
